--- a/styles/video.css
+++ b/styles/video.css
@@ -35,6 +35,7 @@ p {
 
 .thumbnail-row {
     margin-bottom: 12px;
+    position: relative;
 }
 
 .video-author,
@@ -53,3 +54,44 @@ p {
     row-gap: 16px;
     column-gap: 40px;
 }
+
+
+
+
+@media (max-width : 750px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 500px) {
+    .video-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+
+@media(min-width:1000px) {
+    .video-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
+.video-time {
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 10px;
+    right: 5px;
+    font-family: Roboto, Arial;
+    font-size: 12px;
+    font-weight: 500;
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 2px;
+}
+
+/* //Short-hand properties have been ignored */
